--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
-<head>
-    <meta charset="utf-8">
-    <title>HOLODOS.COM</title>
-    <link rel="icon" href="favicon.ico?v=4">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.min.css" rel="stylesheet">
-</head>
-<body id="body" class="page-body">
+    <head>
+        <meta charset="utf-8" />
+        <title>HOLODOS.COM</title>
+        <link rel="icon" href="favicon.ico?v=4" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+            rel="stylesheet"
+        />
+        <link href="/css/normalize.css" rel="stylesheet" />
+        <link href="/css/style.min.css" rel="stylesheet" />
+    </head>
+    <body id="body" class="page-body">
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
-</body>
+    </body>
 </html>
